<resources>
    <string name="app_name">FoodApp</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_message">Message</string>
    <string name="title_account">Account</string>
    <string name="branch_name">Branch name</string>
    <!-- Define a dynamic string to replace the number into -->
    <string name="resend_timer_message">Please wait %1$d seconds to resend.</string>
    <string name="user_phone_number">0395996482</string>

    <string name="new_branch_account_description">Create new branch account</string>
    <string name="image_profile_desc">User Profile Picture</string>
    <string name="new_branch_chat_description">Create new chat</string>
    <string name="hint_message">Message</string>
    <string name="more_vert_desc">More vertical description</string>
    <string name="search_icon_desc">Search icon description</string>
    <string name="send_icon_desc">Send icon description</string>
    <string name="attach_file_icon_desc">Attach file icon description</string>
    <string name="hint_search">Search</string>
    <string name="add_new_food_description">Provide a description for the new food item</string>
    <string name="edit_desc">Edit the selected item</string>
    <string name="delete_desc">Delete the selected item from the list</string>
    <string name="add_to_order_list_desc">Add the selected item to your order</string>
    <string name="all_category_button_desc">See all categories</string>
    <string name="clock_desc">Cooking Time</string>
    <string name="food_recycler_view_name">List Food</string>
    <string name="new_order_description">New Order Description</string>
    <string name="last_update_format">Last update: %1$s</string>
    <string name="perm_noti_granted">Notification permission granted</string>
    <string name="perm_noti_denied">Notification permission denied</string>
    <string name="select_invoice_image">Select Invoice Image</string>
</resources>