<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingHorizontal="2dp"
        android:paddingBottom="5dp"
        android:paddingTop="2dp">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center|start"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_back"
            app:tint="@color/dark_darkest"
            android:contentDescription="@string/search_icon_desc"
            android:background="?android:attr/selectableItemBackground"
            android:visibility="visible"/>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardCornerRadius="25dp"
            android:layout_marginStart="10dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_default"
                android:contentDescription="@string/image_profile_desc" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textAppearance="@style/body_l"
                android:textColor="@color/dark_darkest" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textAppearance="@style/body_m"
                android:textColor="@color/dark_light" />
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:tint="@color/dark_darkest"
            android:src="@drawable/ic_more_vert"
            android:contentDescription="@string/more_vert_desc" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/chat_background"
        tools:listitem="@layout/item_message_send" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/newMessageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/light_medium"
            android:hint="@string/hint_message"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="6"
            android:minLines="1"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerCrop"
            android:layout_gravity="end|center_vertical"
            app:tint="@color/highlight_darkest"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/send_icon_desc"
            android:visibility="visible"/>
    </FrameLayout>
</LinearLayout>
