<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    app:cardBackgroundColor="@color/light_medium"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_gravity="start"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banh_mi_thit" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Banh mi thit"
                    android:textAppearance="@style/heading_m"
                    android:textColor="@color/dark_darkest" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="25.00$"
                        android:textAppearance="@style/body_m"
                        android:textColor="@color/dark_medium" />

                    <TextView
                        android:id="@+id/priceVoucher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="23.00$"
                        android:textAppearance="@style/heading_s"
                        android:textColor="@color/tag_assignment" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="100+"
                        android:textAppearance="@style/body_m"
                        android:textColor="@color/dark_darkest" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=" sold"
                        android:textAppearance="@style/body_m"
                        android:textColor="@color/dark_darkest" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_clock"
                        app:tint="@color/dark_darkest"
                        android:contentDescription="@string/clock_desc"/>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginStart="2dp"
                        android:text="10 minute"
                        android:textAppearance="@style/body_s"
                        android:textColor="@color/dark_darkest" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <!-- Order Branch -->
                <CheckBox
                    android:id="@+id/checkboxSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textAppearance="@style/body_s"
                    android:textColor="@color/highlight_darkest"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/quantityInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/light_medium"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etQuantity"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="1"
                        android:textAppearance="@style/body_m"
                        android:gravity="center"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Branch -->
                <ImageView
                    android:id="@+id/btnOrder"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/add_to_order_list_desc"
                    android:src="@drawable/ic_branch_account_add"
                    android:visibility="gone"
                    app:tint="@color/black" />

                <!-- Admin -->
                <ImageView
                    android:id="@+id/btnEdit"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/edit_desc"
                    android:src="@drawable/ic_edit"
                    android:visibility="gone"
                    app:tint="@color/black" />

                <ImageView
                    android:id="@+id/btnDelete"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="17dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/delete_desc"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone"
                    app:tint="@color/black" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/desc"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Deliciously crispy banhmi filled with savory meats, fresh vegetables, herbs, and a hint of spice. The perfect combination of flavors and textures in every bite"
            android:textAppearance="@style/body_s"
            android:textColor="@color/dark_light" />
    </LinearLayout>
</androidx.cardview.widget.CardView>